fixed line graph overflow

--- a/static/sass/_hacks.scss
+++ b/static/sass/_hacks.scss
@@ -90,6 +90,9 @@ $FILTER_BG:#f9f0e8;
     width: 90%;
     margin-left: 3%;
     margin-top: .8em;
+    svg {
+      height: 90%;
+    }
   }
   .col.last.right-filters {
     margin-top: -3em;
