--- a/static/stylesheets/screen.css
+++ b/static/stylesheets/screen.css
@@ -2856,22 +2856,26 @@ ul.media li.medium:hover .do-remove {
   padding: 15px;
   font-size: 15px;
 }
-/* line 94, ../sass/_hacks.scss */
+/* line 93, ../sass/_hacks.scss */
+#reporting-content .graphs svg {
+  height: 90%;
+}
+/* line 97, ../sass/_hacks.scss */
 #reporting-content .col.last.right-filters {
   margin-top: -3em;
   top: 17.15em;
 }
-/* line 98, ../sass/_hacks.scss */
+/* line 101, ../sass/_hacks.scss */
 #reporting-content .header {
   display: none;
 }
 
-/* line 103, ../sass/_hacks.scss */
+/* line 106, ../sass/_hacks.scss */
 .nv-context {
   margin-top: 20px;
 }
 
-/* line 111, ../sass/_hacks.scss */
+/* line 114, ../sass/_hacks.scss */
 .right-filters .header {
   left: 1.53846em;
   right: 0em;
@@ -2879,7 +2883,7 @@ ul.media li.medium:hover .do-remove {
   top: 0em;
 }
 
-/* line 118, ../sass/_hacks.scss */
+/* line 121, ../sass/_hacks.scss */
 .right-filters .body {
   left: 1.53846em;
   right: 0em;
@@ -2888,23 +2892,23 @@ ul.media li.medium:hover .do-remove {
   position: absolute;
 }
 
-/* line 126, ../sass/_hacks.scss */
+/* line 129, ../sass/_hacks.scss */
 .is-filters.filters {
   margin-bottom: 1.53846em;
 }
 
-/* line 131, ../sass/_hacks.scss */
+/* line 134, ../sass/_hacks.scss */
 .Bulletin.is-expanded .span-66p .body,
 .Incident.is-expanded .span-66p .body {
   padding-right: 3.07692em;
 }
 
-/* line 138, ../sass/_hacks.scss */
+/* line 141, ../sass/_hacks.scss */
 .Actor.in-list {
   min-height: 130px;
 }
 
-/* line 143, ../sass/_hacks.scss */
+/* line 146, ../sass/_hacks.scss */
 .Incident.in-view .map,
 .Bulletin.in-view .map,
 .Actor.in-view .map,
@@ -2917,14 +2921,14 @@ ul.media li.medium:hover .do-remove {
   background-color: #f0f0f0;
 }
 
-/* line 155, ../sass/_hacks.scss */
+/* line 158, ../sass/_hacks.scss */
 .is-preview .body .span-66p {
   width: 100%;
   margin-right: 1.53846em;
   float: none;
 }
 
-/* line 162, ../sass/_hacks.scss */
+/* line 165, ../sass/_hacks.scss */
 .leaflet-top, .leaflet-bottom {
   z-index: 7;
 }
